--- a/index.html
+++ b/index.html
@@ -335,10 +335,10 @@
   <div class="card" id="scanCard">
     <label>Scan Barcode Here</label>
     <div class="scan-field-wrapper">
-      <input id="scan" class="scan-field" placeholder="Focus here and scan" autocomplete="off" autofocus inputmode="none">
+      <input id="scan" class="scan-field" placeholder="⏳ Initializing..." autocomplete="off" autofocus inputmode="none" disabled>
       <button class="clear-btn" id="clearBtn" type="button">×</button>
     </div>
-    <div class="helper-text">Scanner should auto-submit on Enter key</div>
+    <div class="helper-text">Wait for ✅ Ready to scan before scanning</div>
     <div id="status" class="status"></div>
   </div>
 
@@ -395,7 +395,7 @@
   </div>
 
     <div class="footer">
-    © 2025 Polytechnic Resources, Inc. | v8.5.0
+    © 2025 Polytechnic Resources, Inc. | v8.5.1
   </div>
 </div>
 
